--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -1,19 +1,15 @@
-<nav class="col-xs-12 navbar navbar-default">
-    <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="employees.edit({company: $ctrl.$stateParams.id})">Добавить сотрудника</a></li>
-    </ul>
-</nav>
-<div class="col-xs-3">
-    <form>
-        <div class="form-group">
-            <label>Название компании</label>
-            <input type="text" class="form-control" placeholder="Имя" ng-model="$ctrl.company.name">
-        </div>
-        <button type="submit" class="btn btn-default" ng-click="$ctrl.save()">Сохранить</button>
-    </form>
+
+
+<div class="diss_sidebar">
+    <h1>Орг. структура</h1>
+    <companies-form m='$ctrl.m' success="" company="$ctrl.company"></companies-form>
+    <button class="btn btn-warning btn_add helpers-margin-top-30" ng-click="$ctrl.openModal()">Добавить</button>
 </div>
-<div class="col-xs-9">
+
+<div class="helpers-padding-left-350">
     <h2>Сотрудники</h2>
-    <employees-item ng-repeat="employee in $ctrl.company.employees"
-                    item="employee"></employees-item>
+    <div class="row">
+        <employees-item ng-repeat="employee in $ctrl.company.employees"
+                        item="employee"></employees-item>
+    </div>
 </div>
