--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -1,10 +1,9 @@
-
-
 <div class="diss_sidebar">
     <h1>Орг. структура</h1>
-    <companies-form m='$ctrl.m' success="" company="$ctrl.company"></companies-form>
+    <companies-form m='$ctrl.m' success="$ctrl.save()" company="$ctrl.company"></companies-form>
     <button class="btn btn-warning btn_add helpers-margin-top-30" ng-click="$ctrl.openModal()">Добавить</button>
 </div>
+
 
 <div class="helpers-padding-left-350">
     <h2>Сотрудники</h2>
