--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
 <div ng-app="myApp">
   <div class="container-fluid">
+    <navigation></navigation>
     <div ui-view></div>
   </div>
 </div>
