--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -3,14 +3,10 @@
     <companies-form m='$ctrl.m' success="$ctrl.save()" company="$ctrl.company"></companies-form>
     <button class="btn btn-warning btn_add helpers-margin-top-30" ng-click="$ctrl.openModal()">Добавить</button>
 
-    <employees-tree company="$ctrl.company._id" ng-if="$ctrl.company._id"></employees-tree>
 </div>
 
 
 <div class="helpers-padding-left-350">
     <h2>Сотрудники</h2>
-    <div class="row">
-        <employees-item ng-repeat="employee in $ctrl.company.employees"
-                        item="employee"></employees-item>
-    </div>
+    <org-chart data="$ctrl.orgChart"></org-chart>
 </div>
