--- a/client/employees/templates/employeesEdit.html
+++ b/client/employees/templates/employeesEdit.html
@@ -1,13 +1,8 @@
 <div class="diss_sidebar">
-    <h1>Орг. структура</h1>
+    <h1>Орг. компонент</h1>
     <employees-form success="$ctrl.save()" employee="$ctrl.employee"></employees-form>
-    <button class="btn btn-warning btn_add helpers-margin-top-30" ng-click="$ctrl.openModal()">Добавить</button>
 </div>
 
 <div class="helpers-padding-left-350">
     <h2>Подчиненные</h2>
-    <div class="row">
-        <employees-item ng-repeat="employee in $ctrl.employee.children"
-                        item="employee"></employees-item>
-    </div>
 </div>
