--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -5,6 +5,6 @@
 
 
 <div class="helpers-padding-left-350">
-    <h2>Сотрудники</h2>
+    <h2>Организационная схема</h2>
     <org-chart data="$ctrl.orgChart"></org-chart>
 </div>
