--- a/client/styles/_companies.scss
+++ b/client/styles/_companies.scss
@@ -23,8 +23,8 @@
   .employee-add-btn {
     position: absolute;
     cursor: pointer;
-    top: -2px;
-    right: -3px;
+    bottom: -7px;
+    left: -3px;
     font-size: 20px;
     color: $sidebar_bg;
     opacity: 0;
