--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Диссертация</title>
+  <link rel="icon" type="image/ico" href="/static/favicon.ico" />
   <script src="/bundle.js"></script>
 </head>
 <body>
