--- a/client/styles/_common.scss
+++ b/client/styles/_common.scss
@@ -10,6 +10,7 @@ body {
   width: 350px;
   background-color: $sidebar_bg;
   padding: 0 30px;
+  overflow-y: auto;
   h1 {
     color: $white;
     font-family: "Lato";
