--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -4,7 +4,7 @@
 </div>
 
 
-<div class="helpers-padding-left-350">
+<div class="helpers-padding-left-350 orgchart-container">
     <h2>Организационная схема</h2>
     <org-chart data="$ctrl.orgChart"></org-chart>
 </div>
