--- a/client/styles/_heplers_classes.scss
+++ b/client/styles/_heplers_classes.scss
@@ -2,6 +2,13 @@
   &-padding-left-350 {
     padding-left: 350px;
   }
+  &-padding-left-700 {
+    padding-left: 700px;
+  }
+
+  &-width-700 {
+    width: 700px !important;
+  }
 
   &-margin-left-5 {
     margin-left: 5px;
