--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,6 +10,7 @@
 <body>
 <div ng-app="myApp">
   <div class="container-fluid">
+    <alerts></alerts>
     <navigation></navigation>
     <div ui-view></div>
   </div>
