--- a/client/employees/templates/modal.html
+++ b/client/employees/templates/modal.html
@@ -2,5 +2,10 @@
     <h3 class="modal-title" id="modal-title">Добавить орг. элемент</h3>
 </div>
 <div class="modal-body" id="modal-body">
-    <employees-form m='$ctrl.m' resolve="$ctrl.resolve" success="$ctrl.resolve.success" close="$ctrl.close()" employee="$ctrl.employee"></employees-form>
+
+    <form name="form">
+    <div sf-schema="$ctrl.schema" sf-form="$ctrl.form" sf-model="$ctrl.employee"></div> 
+    <button class="btn btn-primary" ng-click="$ctrl.save()">Сохранить</button> 
+    <button class="btn btn-warning helpers-margin-left-5" ng-click="$ctrl.close()">Отмена</button>
+    </form>
 </div>
