--- a/client/employees/templates/employeesEdit.html
+++ b/client/employees/templates/employeesEdit.html
@@ -1,2 +1,8 @@
-<h1>Орг. компонент</h1>
-<employees-form success="$ctrl.save()" employee="$ctrl.employee"></employees-form>
+<div class="row">
+    <div class="col-sm-12">
+        <h1>Орг. компонент</h1>
+    </div>
+    <div class="col-sm-6">
+        <employees-form success="$ctrl.save()" employee="$ctrl.employee"></employees-form>
+    </div>
+</div>
