--- a/client/companies/templates/companies.html
+++ b/client/companies/templates/companies.html
@@ -1,6 +1,7 @@
 <div class="diss_sidebar">
     <h1>Орг. структуры <span class="badge">{{$ctrl.list.length}}</span></h1>
     <button class="btn btn-warning btn_add helpers-margin-top-30" ng-click="$ctrl.openModal()">Добавить</button>
+    <button class="btn btn-info btn_add helpers-margin-top-30" ui-sref="calculations.main">Посчитать</button>
 </div>
 
 <div class="row helpers-padding-left-350">
