--- a/client/calculations/templates/calculations.html
+++ b/client/calculations/templates/calculations.html
@@ -56,5 +56,5 @@
             <strong class="pull-right">Лучший вариант: {{$ctrl.smoAnalysisRes}}</strong>
         </div>
     </div>
-    <a href="/api/calculations/cvs-export" class="btn btn-success">Экспортировать</a>
+    <a href="/api/calculations/cvs-export.csv" class="btn btn-success">Экспортировать</a>
 </div>
