--- a/client/styles/_heplers_classes.scss
+++ b/client/styles/_heplers_classes.scss
@@ -2,6 +2,9 @@
   &-padding-left-350 {
     padding-left: 350px;
   }
+  &-padding-left-325 {
+    padding-left: 325px;
+  }
   &-padding-left-700 {
     padding-left: 700px;
   }
