reformat, add validation to emloyee

--- a/client/employees/templates/employeesEdit.html
+++ b/client/employees/templates/employeesEdit.html
@@ -1,8 +1,10 @@
-<div class="row">
-    <div class="col-sm-12">
-        <h1>Орг. компонент</h1>
-    </div>
-    <div class="col-sm-8">
-        <employees-form success="$ctrl.save()" employee="$ctrl.employee"></employees-form>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1>Орг. компонент</h1>
+        </div>
+        <div class="col-sm-12">
+            <employees-form success="$ctrl.save()" employee="$ctrl.employee"></employees-form>
+        </div>
     </div>
 </div>
