--- a/client/employees/templates/form.html
+++ b/client/employees/templates/form.html
@@ -1,4 +1,4 @@
-<form name="form" ng-submit="$ctrl.save(form)" novalidate>
+<form name="form" ng-init="form.customErrors = {}" ng-submit="$ctrl.save(form)" novalidate>
     <div class="col-sm-12">
         <div class="form-group"
              ng-class="{ 'has-error': form.name.$invalid && form.$submitted }">
@@ -21,113 +21,12 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-12">
-        <ul class="list-group list-group-item form-group"
-            ng-if="$ctrl.employee.type == 'employee'"
-            ng-init="$ctrl.employee.processes = $ctrl.employee.processes || []">
-            <label class="col-xs-12 text-warning">Процессы</label>
-            <li class="list-group-item col-xs-12"
-                ng-repeat="process in $ctrl.employee.processes track by $index"
-                ng-init="process.functions = process.functions || []">
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        <span class="glyphicon glyphicon-remove list-remove-btn" ng-click="$ctrl.removeFromArray($ctrl.employee.processes, $index)"></span>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label>Название процесса</label>
-                        <input class="form-control" type="text" ng-model="process.name">
-                    </div>
+    <form-processes ng-if="$ctrl.employee.type == 'employee'"
+                    form="form"
+                    errors="$ctrl.errors"
+                    processes="$ctrl.employee.processes"></form-processes>
 
-                    <div class="form-group col-sm-4">
-                        <label >Периодичность</label>
-                        <input class="form-control" type="number" ng-model="process.v">
-                    </div>
-                </div>
-
-                <ul class="form-group list-group">
-                    <label class="text-warning">Функции</label>
-                    <li class="list-group-item"
-                        ng-repeat="function in process.functions track by $index"
-                        ng-init="function.actions = function.actions || []">
-
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <span class="glyphicon glyphicon-remove list-remove-btn" ng-click="$ctrl.removeFromArray(process.functions, $index)"></span>
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label>Название функции</label>
-                                <input class="form-control" type="text" ng-model="function.name">
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label >Периодичность</label>
-                                <input class="form-control" type="number" ng-model="function.v">
-                            </div>
-                        </div>
-
-                        <ul class="list-group">
-                            <label class="text-warning">Подфункции и операции</label>
-                            <li class="list-group-item"
-                                ng-repeat="action in function.actions track by $index">
-
-                                <div class="row">
-                                    <div class="col-sm-12">
-                                        <span class="glyphicon glyphicon-remove list-remove-btn" ng-click="$ctrl.removeFromArray(function.actions, $index)"></span>
-                                    </div>
-                                    <div class="form-group col-sm-4">
-                                        <label>Название {{action.type == 'subFunction' ? 'подфункции' : 'операции'}}</label>
-                                        <input class="form-control" type="text" ng-model="action.name">
-                                    </div>
-                                    <div class="form-group col-sm-4">
-                                        <label>Периодичность</label>
-                                        <input class="form-control" type="number" ng-model="action.v">
-                                    </div>
-                                    <div ng-if="action.type == 'operation'" class="form-group col-sm-4">
-                                        <label>Время выполнения (мин)</label>
-                                        <input class="form-control" type="number" ng-model="action.t">
-                                    </div>
-                                </div>
-
-                                <div ng-if="action.type == 'subFunction'">
-                                    <ul class="list-group" >
-                                        <label class="text-warning">Операции</label>
-                                        <li class="list-group-item"
-                                            ng-repeat="operation in action.operations track by $index">
-
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <span class="glyphicon glyphicon-remove list-remove-btn" ng-click="$ctrl.removeFromArray(action.operations, $index)"></span>
-                                                </div>
-                                                <div class="form-group col-sm-4">
-                                                    <label>Название операции</label>
-                                                    <input class="form-control" type="text" ng-model="operation.name">
-                                                </div>
-                                                <div class="form-group col-sm-4">
-                                                    <label>Периодичность</label>
-                                                    <input class="form-control" type="number" ng-model="operation.v">
-                                                </div>
-                                                <div class="form-group col-sm-4">
-                                                    <label>Время выполнения (мин)</label>
-                                                    <input class="form-control" type="number" ng-model="operation.t">
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <div type="button" class="btn btn-link" ng-click="$ctrl.addToArray(action.operations, {})">Добавить операцию</div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="form-inline">
-                            <div type="button" class="btn btn-link" ng-click="$ctrl.addToArray(function.actions, {type: 'subFunction', operations: []})">Добавить подфункцию</div>
-                            <div type="button" class="btn btn-link" ng-click="$ctrl.addToArray(function.actions, {type: 'operation'})">Добавить операцию</div>
-                        </div>
-                    </li>
-                </ul>
-                <div type="button" class="btn btn-link" ng-click="$ctrl.addToArray(process.functions, {})">Добавить функцию</div>
-            </li>
-            <div type="button" class="btn btn-link" ng-click="$ctrl.addToArray($ctrl.employee.processes, {})">Добавить процесс</div>
-        </ul>
-    </div>
     <div class="form-group col-sm-12 helpers-margin-top-30">
         <button  type="submit" class="btn btn-primary">Сохранить</button>
     </div>
