--- a/client/common/templates/naivgation.html
+++ b/client/common/templates/naivgation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default row">
+<nav class="navbar navbar-default">
     <ul class="nav navbar-nav">
         <li><a ui-sref="companies.list">В начало</a></li>
     </ul>
