--- a/client/companies/templates/companiesEdit.html
+++ b/client/companies/templates/companiesEdit.html
@@ -1,6 +1,8 @@
 <div class="diss_sidebar">
     <h1>Орг. структура</h1>
     <companies-form m='$ctrl.m' success="$ctrl.save()" company="$ctrl.company"></companies-form>
+    <button class="btn btn-info btn_add helpers-margin-top-30"
+            ui-sref="calculations.employee({id: $ctrl.company._id})">Посчитать</button>
 </div>
 
 <div class="helpers-padding-left-350 orgchart-container">
